--- a/MattisCSS.CSS
+++ b/MattisCSS.CSS
@@ -42,3 +42,11 @@ header {
   background-color: black;
   border-radius: 2px;
 }
+h1{
+  text-align: center;
+  font-style: italic;
+}
+footer{
+  text-align: center;
+  font-style: italic;
+}
