--- a/MattisCSS.CSS
+++ b/MattisCSS.CSS
@@ -1,15 +1,20 @@
 header {
-  display: flex;
+ display: flex;
   justify-content: space-between;
+  align-items: center;
+  background: #6b4f4f;
+  color: #fff;
+  padding: 1rem;
+  position: relative;
 }
 
 #menu {
   display: none;
   flex-direction: column;
-  background-color: darkcyan;
+  background-color: #6b4f4f;
   gap: 10px;
   position: absolute;
-  top: 55px;
+  top: 120px;
   border-style: dotted;
   right: 0;
   width: 200px;
@@ -26,13 +31,11 @@ header {
   display: flex;
 }
 #hamburger {
-  display: flex;
+   display: flex;
   flex-direction: column;
   gap: 5px;
   background: none;
   border: none;
-  padding: 10px;
-  font-size: 24px;
   cursor: pointer;
 }
 #hamburger span {
@@ -49,4 +52,9 @@ h1{
 footer{
   text-align: center;
   font-style: italic;
+}
+body {
+  font-family: 'Arial', sans-serif;
+  background: #f8f5f2;
+  color: #333;
 }
